objects/nFORCE__Section_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>nFORCE__Display_Order__c</fullName>
        <defaultValue>1.01</defaultValue>
        <description>This field is optional. It is populated automatically by the Layout Builder tool on the parent screen section. This field determines the display order of section configurations on a screen section using ascending order.</description>
        <label>Display Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFORCE__Field_Set_Key__c</fullName>
        <description>This field is required. It is populated automatically by the Layout Builder tool on the parent screen section. It stores the name of the field set being used to determine what fields to display in Credit Memo or the UI.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Field Set</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Filter_Criteria__c</fullName>
        <description>This field is optional and is populated by the Section Builder tool. The field denotes whether a section configuration should return only records that meet the specified criteria. The value should use appropriate syntax for the WHERE clause of a SOQL query. The default value is empty and returns all records.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field is optional and is populated by the Section Builder tool. The field denotes whether a tier should return only records that meet the specified criteria. The value should use appropriate syntax for the WHERE clause of a SOQL query.</inlineHelpText>
        <label>Filter Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nFORCE__Layout__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional. It is populated automatically by the Layout Builder tool on the parent screen section. This field specifies the layout associated with the section configuration. It specifies the layout of the fields in the credit memo for the field set associated with this record.</description>
        <label>Layout</label>
        <referenceTo>nFORCE__Layout__c</referenceTo>
        <relationshipLabel>Section Configurations</relationshipLabel>
        <relationshipName>Section_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nFORCE__Limit__c</fullName>
        <description>This field is optional and is populated by an administrator. When used with the appropriate section resources, the numeric value is used to limit the returned records. It may also be used to return offset records when the value of nFORCE__Offset_By_Limit__c field is set to true. The default value is 0 to return all records.</description>
        <inlineHelpText>This field is optional and is populated by an administrator. When used with the appropriate section resources, the numeric value is used to limit the returned records. The default value is 0 to return all records.</inlineHelpText>
        <label>Limit</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFORCE__Offset_By_Limit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and is populated by an administrator. The default value is false, which denotes that the value of nFORCE__Limit__c is a hard set limit. When updated to true, the field enables returning offset records with appropriate section resource.</description>
        <inlineHelpText>This field is optional and is populated by an administrator. The default value is false, which denotes that the value of Limit is a hard set limit. When updated to true, the field enables returning offset records with appropriate section resource.</inlineHelpText>
        <label>Offset By Limit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__Parent_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional. It is populated automatically by the Layout Builder tool on the parent screen section. This field specifies a parent layout associated with the layout record you are viewing. Parent layouts are used to ensure parent-child navigational integreity between section configurations, as well as determining the display order.</description>
        <label>Parent Configuration</label>
        <referenceTo>nFORCE__Section_Configuration__c</referenceTo>
        <relationshipLabel>Child Configurations</relationshipLabel>
        <relationshipName>Child_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nFORCE__Parent_Relationship_Name__c</fullName>
        <description>This field is optional. It is populated automatically by the Layout Builder tool on the parent screen section. It is used to store parent-child navigational data, so the screen section can properly display data on child or parent objects of the screen section&apos;s sObject_Type (value in nFORCE__sObject_Type__c field).</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Parent Relationship Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Screen_Section__c</fullName>
        <description>This field is required. It is populated automatically by the Layout Builder tool on the parent screen section. This field specifies the screen section associated with the section configuration. It provides the screen section with the fields to be used.</description>
        <label>Screen Section</label>
        <referenceTo>nFORCE__Screen_Section__c</referenceTo>
        <relationshipLabel>Section Configurations</relationshipLabel>
        <relationshipName>Section_Configurations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>nFORCE__Section_Header__c</fullName>
        <description>This field is optional. It is populated by Section Builder when the administrator adds a value on the tier&apos;s header tab. It is used by the view generator to create a smaller header for a specific tier.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>A header to display at the top of this section.</inlineHelpText>
        <label>Section Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Sort_Criteria__c</fullName>
        <description>This field is optional and is populated by the Section Builder tool. The field denotes whether a section configuration should return records in a specified sorted order. The value should use appropriate syntax for the ORDER BY clause of a SOQL query. The default value is empty and returns records in no specific order.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field is optional and is populated by the Section Builder tool. The field denotes whether a tier should return records in a specified sorted order. The value should use appropriate syntax for the ORDER BY clause of a SOQL query.</inlineHelpText>
        <label>Sort Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nFORCE__Unique__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and is populated by the Section Builder tool. This field denotes whether a section configuration should return only unique records.  When the value is set to true, the view generator will respect the setting and generate appropriate html markup. In a hierarchy of dependent section configurations, only a single record should have a true value to ensure proper markup is generated. The default value is false and will result in view generator creating markup that lists all returned records.</description>
        <inlineHelpText>This field is optional and is populated by the Section Builder tool. This field denotes whether a tier should return only unique records. When the value is set to true, the generated html code will respect the setting.</inlineHelpText>
        <label>Unique</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__lookupKey__c</fullName>
        <description>The field is optional. If populated, the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>nFORCE__sObject_Type__c</fullName>
        <description>This field is required. It is populated automatically by the Layout Builder tool on the parent screen section. This field specifies the object of the field set used for the section configuration.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>sObject Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Section Configuration</label>
    <listViews>
        <fullName>nFORCE__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SC-{000000000}</displayFormat>
        <label>Section Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Section Configurations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>nFORCE__Child_Display_Order</fullName>
        <active>true</active>
        <description>Ensures children configurations are ordered after their parents.</description>
        <errorConditionFormula>AND( NOT( ISBLANK( nFORCE__Parent_Configuration__c ) ) , nFORCE__Display_Order__c  &lt;=  nFORCE__Parent_Configuration__r.nFORCE__Display_Order__c )</errorConditionFormula>
        <errorMessage>Child configurations must follow their parents in display order.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>nFORCE__Parent_Integrity</fullName>
        <active>true</active>
        <description>Ensures Parent Configuration and Parent Relationship Name are both populated if one is.</description>
        <errorConditionFormula>OR( AND(  NOT( ISBLANK( nFORCE__Parent_Configuration__c ) )  , ISBLANK( nFORCE__Parent_Relationship_Name__c ) ) , AND( NOT( ISBLANK( nFORCE__Parent_Relationship_Name__c ) ) , ISBLANK( nFORCE__Parent_Configuration__c ) ) )</errorConditionFormula>
        <errorMessage>Parent Configuration and Parent Relationship Name must both be set.</errorMessage>
    </validationRules>
</CustomObject>